RESOLVED FIXED 57958
Context menu does not show in PDF views if there is no UI delegate
https://bugs.webkit.org/show_bug.cgi?id=57958
Summary Context menu does not show in PDF views if there is no UI delegate
Timothy Hatcher
Reported 2011-04-06 10:04:56 PDT
A WebView with no UI delegate does not show a context menu in PDF view.
Attachments
Proposed Change (3.01 KB, patch)
2011-04-06 10:18 PDT, Timothy Hatcher
darin: review+
timothy: commit-queue-
Timothy Hatcher
Comment 1 2011-04-06 10:18:07 PDT
Created attachment 88464 [details] Proposed Change This bug is blocking me from testing an upcoming context menu change.
WebKit Review Bot
Comment 2 2011-04-06 10:21:12 PDT
Attachment 88464 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style']" exit_code: 1 Source/WebKit/mac/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3 2011-04-06 10:39:41 PDT
Comment on attachment 88464 [details] Proposed Change View in context: https://bugs.webkit.org/attachment.cgi?id=88464&action=review > Source/WebKit/mac/WebView/WebView.mm:1277 > + // CallUIDelegate returns nil if UIDelegate is nil or dosen't respond to the selector. So we need to check that here Typo: dosen't > Source/WebKit/mac/WebView/WebView.mm:1281 > + menuItems = CallUIDelegate(self, selector, element, defaultMenuItems); Annoying to be doing respondsToSelector twice here.
Timothy Hatcher
Comment 4 2011-04-06 10:46:05 PDT
(In reply to comment #3) > (From update of attachment 88464 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=88464&action=review > > > Source/WebKit/mac/WebView/WebView.mm:1281 > > + menuItems = CallUIDelegate(self, selector, element, defaultMenuItems); > > Annoying to be doing respondsToSelector twice here. We could have an out parameter to know if the delegate responds. But that would be a larger change, and WebKit1 is the past!
Timothy Hatcher
Comment 5 2011-04-11 11:53:32 PDT
Landed in r83464.
Note You need to log in before you can comment on or make changes to this bug.