Fix a bug where the context menu does not show in PDF documents if there is no UI delegate or the UI delegate does not respond to the context menu selector.

https://webkit.org/b/57958

Reviewed by Darin Adler.

* WebView/WebView.mm:
(-[WebView _menuForElement:defaultItems:]): CallUIDelegate returns nil
if UIDelegate is nil or doesn't respond to the selector. So check that
here to distinguish between using defaultMenuItems or the delegate
really returning nil to say "no context menu".

Canonical link: https://commits.webkit.org/73235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83464 268f45cc-cd09-0410-ab3c-d52691b4dbfc